--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "@pusher/chatkit-client": "^1.5.0",
+    "@pusher/chatkit-server": "^1.1.0",
+    "axios": "^0.18.0",
+    "cors": "^2.8.5",
+    "path": "^0.12.7",
+    "resolve": "^1.10.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
